# ai-health-webapp

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
src/app/: main.py
src/app/api/endpoints/: health.py  upload.py
src/app/core/: schemas.py
src/app/langgraf/: langgraf_logic.py
src/app/models/: schemas.py
src/app/services/: calculate_metrics.py  face_analysis.py  face_metrics.py  skin_analysis.py
src/app/utils/: helpers.py  utils.py
src/static/: index.html
